--- a/Warhammer 40k Black Crusade/src/scss/_generic.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_generic.scss
@@ -38,6 +38,10 @@
         text-align: right;
     }
 
+    .sheet-text-left {
+        text-align: left;
+    }
+
     .sheet-font-weight-bold {
         font-weight: bold;
     }
