--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -41,7 +41,7 @@ h1 {
   font-family: serif; }
 
 h2 {
-  font-size: 1em;
+  font-size: 1.5em;
   line-height: 1.4em;
   text-transform: capitalize; }
   h2.sheet-label {
@@ -107,16 +107,6 @@ textarea {
   .charsheet div.sheet-row {
     display: inline-grid; }
 
-/* HIDE DIFFERENT SHEET TYPES BY DEFAULT
-   ============================= */
-div.sheet-npc,
-div.sheet-pc {
-  display: none; }
-
-input.sheet-type[value="npc"] ~ div.sheet-npc,
-input.sheet-type[value="character"] ~ div.sheet-pc {
-  display: block; }
-
 /* GRID
    ============================= */
 div.sheet-grid {
@@ -156,6 +146,9 @@ div.sheet-background {
 
 .sheet-text-right {
   text-align: right; }
+
+.sheet-text-left {
+  text-align: left; }
 
 .sheet-font-weight-bold {
   font-weight: bold; }
@@ -204,6 +197,7 @@ span.sheet-display {
 input.sheet-toggles {
   position: relative;
   opacity: 0;
+  width: 100%;
   z-index: 2; }
   input.sheet-toggles:checked + span {
     color: #620911;
@@ -237,47 +231,92 @@ div.sheet-pc {
   filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30);
   -ms-filter: "progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30)";
   zoom: 1; }
+  div.sheet-pc div.sheet-navigation {
+    grid-template-columns: 1fr minmax(auto, 100px) minmax(auto, 100px) minmax(auto, 100px); }
+    div.sheet-pc div.sheet-navigation img {
+      max-height: 8em; }
+    div.sheet-pc div.sheet-navigation label.sheet-pseudo-button {
+      display: grid; }
+      div.sheet-pc div.sheet-navigation label.sheet-pseudo-button input {
+        min-height: 25px;
+        max-height: 25px;
+        position: relative;
+        opacity: 0;
+        width: 100%;
+        z-index: 2; }
+        div.sheet-pc div.sheet-navigation label.sheet-pseudo-button input, div.sheet-pc div.sheet-navigation label.sheet-pseudo-button input + span {
+          grid-area: 1 / 1 / 1 / 1; }
+        div.sheet-pc div.sheet-navigation label.sheet-pseudo-button input:checked + span {
+          background-color: #ceccc0;
+          color: black;
+          margin-left: 5%; }
+      div.sheet-pc div.sheet-navigation label.sheet-pseudo-button span {
+        background-color: #620911;
+        border-radius: 10%;
+        border: 2px solid #620911;
+        color: whitesmoke;
+        cursor: pointer;
+        display: inline-block;
+        min-height: 25px;
+        max-height: 25px;
+        padding: 1% 3%;
+        text-transform: capitalize;
+        width: 80%; }
   div.sheet-pc div.sheet-info h1 {
     font-size: 1em;
     color: black; }
   div.sheet-pc div.sheet-info div.sheet-archetype {
     grid-template-columns: auto 1fr auto 3em auto 1fr; }
-  div.sheet-pc div.sheet-characteristics div.sheet-10column {
-    grid-template-columns: 1.25fr 1.25fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
-  div.sheet-pc div.sheet-characteristics h3 {
-    font-size: 1em; }
-  div.sheet-pc div.sheet-skill-talents-traits div.sheet-headers {
-    grid-template-columns: 70% 29%; }
-  div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx {
-    grid-template-columns: 65% 1fr 1fr 1fr 1fr; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2 {
-      display: inline-block; }
-      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='trained'] {
-        grid-column: 2; }
-      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='10+'] {
-        grid-column: 3; }
-      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='20+'] {
-        grid-column: 4; }
-      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='30+'] {
-        grid-column: 5; }
-  div.sheet-pc div.sheet-skill-talents-traits div.sheet-left-col {
+  div.sheet-pc div.sheet-characteristics {
+    margin-top: 2%; }
+    div.sheet-pc div.sheet-characteristics div.sheet-10column {
+      grid-template-columns: 1.25fr 1.25fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
+    div.sheet-pc div.sheet-characteristics h2 {
+      font-size: 1.1em; }
+    div.sheet-pc div.sheet-characteristics h3 {
+      font-size: 1em; }
+  div.sheet-pc div.sheet-skill-talents-traits {
+    margin-top: 2%; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-headers {
+      grid-template-columns: 70% 29%; }
+    div.sheet-pc div.sheet-skill-talents-traits h2 {
+      font-size: 1em; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx {
+      grid-template-columns: 65% 1fr 1fr 1fr 1fr; }
+      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2 {
+        display: inline-block; }
+        div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='trained'] {
+          grid-column: 2; }
+        div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='10+'] {
+          grid-column: 3; }
+        div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='20+'] {
+          grid-column: 4; }
+        div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2[data-i18n='30+'] {
+          grid-column: 5; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-repeating-container button {
+      max-height: 25px; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-repeating-container div.sheet-rowx {
+      grid-template-columns: 9% 55% 1fr 1fr 1fr 1fr; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-left-col {
+      display: inline-block;
+      margin-right: 2%;
+      width: 35%; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col {
+      display: inline-block;
+      width: 25%; }
+  div.sheet-pc div.sheet-advancement div.sheet-left-col {
     display: inline-block;
     margin-right: 2%;
-    width: 35%; }
-  div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col {
+    width: 55%; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-headers {
+      grid-template-columns: auto auto auto; }
+  div.sheet-pc div.sheet-advancement div.sheet-right-col {
     display: inline-block;
-    width: 25%; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col input[name='attr_collapse'],
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col input[name='attr_collapse'] + span {
-      grid-area: 1 / 3 / 1 / 3; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col input[name='attr_settings'],
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col input[name='attr_settings'] + span {
-      grid-area: 1 / 4 / 1 / 4; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col div.sheet-collapse,
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col div.sheet-settings {
-      grid-column: 1 / 5; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col div.sheet-settings {
-      grid-template-columns: 1fr; }
+    width: 42%; }
+    div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-headers {
+      margin-top: 10%; }
+    div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-grid {
+      grid-template-columns: auto 1fr; }
 
 /*  REPEATING SECTIONS
     ============================= */
@@ -285,6 +324,23 @@ div.sheet-repeating-container button {
   font-variant: none; }
 div.sheet-repeating-container textarea {
   margin-top: 2%; }
+div.sheet-repeating-container .repcontrol {
+  margin-top: 5%; }
+div.sheet-repeating-container div.sheet-descriptor {
+  grid-template-columns: 1fr 1.5em 1.5em; }
+  div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse {
+    padding-left: 5%; }
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
+    grid-area: 1 / 2 / 1 / 2; }
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
+    grid-area: 1 / 3 / 1 / 3; }
+  div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse,
+  div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
+    grid-column: 1 / 4; }
+  div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
+    grid-template-columns: 1fr; }
 
 /*  SWITCH
     ============================= */
@@ -427,10 +483,14 @@ div.sheet-footer {
 /*  SHOW & HIDE SHEETS
     ============================= */
 /***** SETTINGS *****/
-div.sheet-collapse,
-.sheet-settings {
-  display: none; }
-
 input[name='attr_collapse']:checked ~ div.sheet-collapse,
 input[name='attr_settings']:checked ~ div.sheet-settings {
   display: block; }
+
+input.sheet-type:not([value="npc"]) ~ div.sheet-npc, input[name='attr_sheet_type']:not([value='core']) ~ div.sheet-pc div.sheet-info,
+input[name='attr_sheet_type']:not([value='core']) ~ div.sheet-pc div.sheet-skill-talents-traits,
+input[name='attr_sheet_type']:not([value='arms']) ~ div.sheet-pc div.sheet-arms,
+input[name='attr_sheet_type']:not([value='advancement']) ~ div.sheet-pc div.sheet-advancement,
+input[name='attr_sheet_type'][value='advancement'] ~ div.sheet-pc div.sheet-characteristics, div.sheet-collapse,
+.sheet-settings {
+  display: none; }
