finish advancement tab

--- a/Warhammer 40k Black Crusade/warhammer40k.pug
+++ b/Warhammer 40k Black Crusade/warhammer40k.pug
@@ -115,7 +115,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 							+numberInput(val)
 					.rowx.headers
 						h2.text-center(data-i18n='total alignment advances')
-					each val in ['knorne', 'slaanesh', 'nurgle', 'tzeentch', 'unaligned']
+					each val in ['khorne', 'slaanesh', 'nurgle', 'tzeentch', 'unaligned']
 						.rowx.grid
 							h3(data-i18n=val)
 							+numberInput(val)
