--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -238,6 +238,11 @@ div.sheet-pc {
             margin-top: 5%;
         }
 
+        .repcontrol_del {
+            font-family: "pictos";
+            position: relative;
+        }
+
         div.sheet-descriptor {
             grid-template-columns: 1fr 1.5em 1.5em;
 
