--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -304,12 +304,38 @@ div.sheet-pc {
     div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col {
       display: inline-block;
       width: 25%; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container div.sheet-rowx {
+      grid-template-columns: 1fr 1.5em 1.5em; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_collapse'],
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_collapse'] + span {
+      grid-area: 1 / 2 / 1 / 2; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_settings'],
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_settings'] + span {
+      grid-area: 1 / 3 / 1 / 3; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container div.sheet-collapse,
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container div.sheet-settings {
+      grid-column: 1 / 4; }
   div.sheet-pc div.sheet-advancement div.sheet-left-col {
     display: inline-block;
     margin-right: 2%;
     width: 55%; }
     div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-headers {
-      grid-template-columns: auto auto auto; }
+      grid-template-columns: 1fr 15% 20% 1.5em 1.5em; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container div.sheet-rowx {
+      grid-template-columns: 1fr 15% 20% 1.5em 1.5em; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container textarea {
+      grid-column: 1 / 6; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container input[name='attr_collapse'],
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container input[name='attr_collapse'] + span {
+      grid-area: 1 / 4 / 1 / 4; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container input[name='attr_settings'],
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container input[name='attr_settings'] + span {
+      grid-area: 1 / 5 / 1 / 5; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container label[data-i18n-title="alignment"] {
+      grid-column: 3 / 6; }
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container div.sheet-collapse,
+    div.sheet-pc div.sheet-advancement div.sheet-left-col div.sheet-repeating-container div.sheet-settings {
+      grid-column: 1 / 6; }
   div.sheet-pc div.sheet-advancement div.sheet-right-col {
     display: inline-block;
     width: 42%; }
@@ -329,21 +355,12 @@ div.sheet-repeating-container .repcontrol {
 div.sheet-repeating-container .repcontrol_del {
   font-family: "pictos";
   position: relative; }
-div.sheet-repeating-container div.sheet-descriptor {
-  grid-template-columns: 1fr 1.5em 1.5em; }
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse {
-    padding-left: 5%; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
-    grid-area: 1 / 2 / 1 / 2; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
-    grid-area: 1 / 3 / 1 / 3; }
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse,
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
-    grid-column: 1 / 4; }
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
-    grid-template-columns: 1fr; }
+div.sheet-repeating-container div.sheet-collapse {
+  padding-left: 5%; }
+div.sheet-repeating-container div.sheet-settings {
+  background-color: #ceccc0;
+  grid-template-columns: 1fr;
+  padding: 2% 1%; }
 
 /*  SWITCH
     ============================= */
