--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -194,6 +194,27 @@ div.sheet-pc {
             display: inline-block;
             width: 25%;
         }
+
+        div.sheet-repeating-container {
+            div.sheet-rowx {
+                grid-template-columns: 1fr 1.5em 1.5em;
+            }
+
+            input[name='attr_collapse'],
+            input[name='attr_collapse'] + span {
+                grid-area: 1 / 2 / 1 / 2;
+            }
+
+            input[name='attr_settings'],
+            input[name='attr_settings'] + span {
+                grid-area: 1 / 3 / 1 / 3;
+            }
+
+            div.sheet-collapse,
+            div.sheet-settings {
+                grid-column: 1 / 4;
+            }
+        }
     }
 
     div.sheet-advancement {
@@ -203,7 +224,36 @@ div.sheet-pc {
             width: 55%;
 
             div.sheet-headers {
-                grid-template-columns: auto auto auto;
+                grid-template-columns: 1fr 15% 20% 1.5em 1.5em;
+            }
+
+            div.sheet-repeating-container {
+                div.sheet-rowx {
+                    grid-template-columns: 1fr 15% 20% 1.5em 1.5em;
+                }
+
+                textarea {
+                    grid-column: 1 / 6;
+                }
+
+                input[name='attr_collapse'],
+                input[name='attr_collapse'] + span {
+                    grid-area: 1 / 4 / 1 / 4;
+                }
+
+                input[name='attr_settings'],
+                input[name='attr_settings'] + span {
+                    grid-area: 1 / 5 / 1 / 5;
+                }
+
+                label[data-i18n-title="alignment"] {
+                    grid-column: 3 / 6;
+                }
+
+                div.sheet-collapse,
+                div.sheet-settings {
+                    grid-column: 1 / 6;
+                }
             }
         }
 
@@ -243,31 +293,14 @@ div.sheet-pc {
             position: relative;
         }
 
-        div.sheet-descriptor {
-            grid-template-columns: 1fr 1.5em 1.5em;
+        div.sheet-collapse {
+            padding-left: 5%;
+        }
 
-            div.sheet-collapse {
-                padding-left: 5%;
-            }
-
-            input[name='attr_collapse'],
-            input[name='attr_collapse'] + span {
-                grid-area: 1 / 2 / 1 / 2;
-            }
-
-            input[name='attr_settings'],
-            input[name='attr_settings'] + span {
-                grid-area: 1 / 3 / 1 / 3;
-            }
-
-            div.sheet-collapse,
-            div.sheet-settings {
-                grid-column: 1 / 4;
-            }
-
-            div.sheet-settings {
-                grid-template-columns: 1fr;
-            }
+        div.sheet-settings {
+            background-color: $light;
+            grid-template-columns: 1fr;
+            padding: 2% 1%;
         }
     }
 
