--- a/Warhammer 40k Black Crusade/warhammer40k.pug
+++ b/Warhammer 40k Black Crusade/warhammer40k.pug
@@ -126,7 +126,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 								+checkboxSymbol('settings', 'x')
 								.rowx.collapse
 									span.collapse(name='attr_description')
-								.rowx.grid.settings
+								.rowx.settings
 									+textInput(`name`)
 									+numberInput(`cost`)
 									select(name='attr_alignment' value='unaligned')
