--- a/Warhammer 40k Black Crusade/src/scss/_hide.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_hide.scss
@@ -7,6 +7,9 @@
 	display: none; 
 }			
 
+%display-inline-grid {  
+	display: inline-grid; 
+}	
 
 input.sheet-type:not([value="npc"]) ~  div.sheet-npc {
     @extend %display-none;
@@ -25,7 +28,19 @@ div.sheet-collapse,
 	@extend %display-none; 
 }
 
-input[name='attr_collapse']:checked ~ div.sheet-collapse,
-input[name='attr_settings']:checked ~ div.sheet-settings {
+input[name='attr_collapse']:checked ~ div.sheet-collapse {
     @extend %display-block;
+}
+
+div.sheet-skill-talents-traits {
+	input[name='attr_settings']:checked ~ div.sheet-settings {
+	    @extend %display-block;
+	}	
+}
+
+div.sheet-advancement {
+	input[name='attr_settings']:checked ~ div.sheet-settings {
+	    @extend %display-inline-grid;
+	    grid-column-gap: 1%;
+	}	
 }
