--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -178,6 +178,9 @@ div.sheet-3column {
 div.sheet-4column {
   grid-template-columns: 1fr 1fr 1fr 1fr; }
 
+div.sheet-5column {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr; }
+
 div.sheet-6column {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; }
 
@@ -189,6 +192,9 @@ div.sheet-2autocolumn {
 
 div.sheet-4autocolumn {
   grid-template-columns: auto 1fr auto 1fr; }
+
+div.sheet-8autocolumn {
+  grid-template-columns: auto 1fr auto 1fr auto 1fr auto 1fr; }
 
 span.sheet-display {
   border-bottom: 2px dotted black;
@@ -270,7 +276,7 @@ div.sheet-pc {
   div.sheet-pc div.sheet-characteristics {
     margin-top: 2%; }
     div.sheet-pc div.sheet-characteristics div.sheet-10column {
-      grid-template-columns: 1.25fr 1.25fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
+      grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
     div.sheet-pc div.sheet-characteristics h2 {
       font-size: 1.1em; }
     div.sheet-pc div.sheet-characteristics h3 {
@@ -304,14 +310,6 @@ div.sheet-pc {
     div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col {
       display: inline-block;
       width: 25%; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container div.sheet-rowx {
-      grid-template-columns: 1fr 1.5em 1.5em; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_collapse'],
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_collapse'] + span {
-      grid-area: 1 / 2 / 1 / 2; }
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_settings'],
-    div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container input[name='attr_settings'] + span {
-      grid-area: 1 / 3 / 1 / 3; }
     div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container div.sheet-collapse,
     div.sheet-pc div.sheet-skill-talents-traits div.sheet-repeating-container div.sheet-settings {
       grid-column: 1 / 4; }
@@ -343,6 +341,44 @@ div.sheet-pc {
       margin-top: 10%; }
     div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-grid {
       grid-template-columns: auto 1fr; }
+  div.sheet-pc div.sheet-arms div.sheet-left-col {
+    display: inline-block;
+    margin-right: 2%;
+    width: 54%; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse,
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings {
+      grid-column: 1 / 4; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse h2 {
+      font-size: 1em; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse span.sheet-text-center {
+      padding: 15% 2%; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings h2 {
+      font-size: 1.1em; }
+  div.sheet-pc div.sheet-arms div.sheet-right-col {
+    display: inline-block;
+    width: 43%; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col h2 {
+      font-size: 1.1em; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col h3 {
+      font-size: 1em; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-head div.sheet-col {
+      grid-column: 2; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center {
+      margin-top: 2%; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(1) {
+        grid-column: 1; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(2) {
+        grid-column: 2; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(3) {
+        grid-column: 3; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs {
+      margin-top: 2%; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs div.sheet-col:nth-of-type(1) {
+        grid-column: 1; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs div.sheet-col:nth-of-type(2) {
+        grid-column: 3; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-repeating-container div.sheet-settings {
+      grid-column: 1 / 4; }
 
 /*  REPEATING SECTIONS
     ============================= */
@@ -361,6 +397,14 @@ div.sheet-repeating-container div.sheet-settings {
   background-color: #ceccc0;
   grid-template-columns: 1fr;
   padding: 2% 1%; }
+div.sheet-repeating-container div.sheet-descriptor {
+  grid-template-columns: 1fr 1.5em 1.5em; }
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
+    grid-area: 1 / 2 / 1 / 2; }
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
+  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
+    grid-area: 1 / 3 / 1 / 3; }
 
 /*  SWITCH
     ============================= */
@@ -503,7 +547,8 @@ div.sheet-footer {
 /*  SHOW & HIDE SHEETS
     ============================= */
 /***** SETTINGS *****/
-input[name='attr_collapse']:checked ~ div.sheet-collapse, div.sheet-skill-talents-traits input[name='attr_settings']:checked ~ div.sheet-settings {
+input[name='attr_collapse']:checked ~ div.sheet-collapse, div.sheet-skill-talents-traits input[name='attr_settings']:checked ~ div.sheet-settings,
+div.sheet-arms input[name='attr_settings']:checked ~ div.sheet-settings {
   display: block; }
 
 input.sheet-type:not([value="npc"]) ~ div.sheet-npc, input[name='attr_sheet_type']:not([value='core']) ~ div.sheet-pc div.sheet-info,
