--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -137,7 +137,7 @@ div.sheet-pc {
         margin-top: 2%;
 
         div.sheet-10column {
-            grid-template-columns: 1.25fr 1.25fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         }
 
         h2 {
@@ -196,20 +196,6 @@ div.sheet-pc {
         }
 
         div.sheet-repeating-container {
-            div.sheet-rowx {
-                grid-template-columns: 1fr 1.5em 1.5em;
-            }
-
-            input[name='attr_collapse'],
-            input[name='attr_collapse'] + span {
-                grid-area: 1 / 2 / 1 / 2;
-            }
-
-            input[name='attr_settings'],
-            input[name='attr_settings'] + span {
-                grid-area: 1 / 3 / 1 / 3;
-            }
-
             div.sheet-collapse,
             div.sheet-settings {
                 grid-column: 1 / 4;
@@ -271,6 +257,89 @@ div.sheet-pc {
         }
     }
 
+    div.sheet-arms {
+        div.sheet-left-col {
+            display: inline-block;
+            margin-right: 2%;
+            width: 54%;
+
+            div.sheet-repeating-container {
+                div.sheet-collapse,
+                div.sheet-settings {
+                    grid-column: 1 / 4;
+                }
+
+                div.sheet-collapse {
+                  h2 {
+                    font-size: 1em;
+                  }
+
+                  span.sheet-text-center {
+                    padding: 15% 2%;
+                  }
+                }
+
+                div.sheet-settings {
+                  h2 {
+                    font-size: 1.1em;
+                  }
+                }
+            }
+        }
+
+        div.sheet-right-col {
+            display: inline-block;
+            width: 43%;
+
+            h2 {
+              font-size: 1.1em;
+            }
+
+            h3 {
+              font-size: 1em;
+            }
+
+            div.sheet-head {
+              div.sheet-col {
+                grid-column: 2;
+              }
+            }
+
+            div.sheet-center {
+              margin-top: 2%;
+
+              div.sheet-col:nth-of-type(1) {
+                grid-column: 1;
+              }
+
+              div.sheet-col:nth-of-type(2) {
+                grid-column: 2;
+              }
+
+              div.sheet-col:nth-of-type(3) {
+                grid-column: 3;
+              }
+            }
+
+            div.sheet-legs {
+              margin-top: 2%;
+
+              div.sheet-col:nth-of-type(1) {
+                grid-column: 1;
+              }
+
+              div.sheet-col:nth-of-type(2) {
+                grid-column: 3;
+              }
+            }
+
+            div.sheet-repeating-container {
+              div.sheet-settings {
+                grid-column: 1 / 4;
+              }
+            }
+        }
+    }
 }
 
 /*  REPEATING SECTIONS
@@ -301,6 +370,20 @@ div.sheet-pc {
             background-color: $light;
             grid-template-columns: 1fr;
             padding: 2% 1%;
+        }
+
+        div.sheet-descriptor {
+            grid-template-columns: 1fr 1.5em 1.5em;
+
+          input[name='attr_collapse'],
+          input[name='attr_collapse'] + span {
+              grid-area: 1 / 2 / 1 / 2;
+          }
+
+          input[name='attr_settings'],
+          input[name='attr_settings'] + span {
+              grid-area: 1 / 3 / 1 / 3;
+          }
         }
     }
 
