--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -127,6 +127,13 @@ div.sheet-background {
 .sheet-bottom-border {
   border-bottom: 0.2em solid black; }
 
+div.sheet-borders {
+  border-left: 0.2em solid black;
+  border-radius: 0.5em;
+  border-right: 0.2em solid black;
+  min-height: 20px;
+  padding: 0px 10%; }
+
 .sheet-pictos {
   font-family: "pictos"; }
 
@@ -341,6 +348,9 @@ div.sheet-pc {
       margin-top: 10%; }
     div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-grid {
       grid-template-columns: auto 1fr; }
+  div.sheet-pc div.sheet-arms div.sheet-headers,
+  div.sheet-pc div.sheet-arms div.sheet-repeating-container {
+    margin-top: 5%; }
   div.sheet-pc div.sheet-arms div.sheet-left-col {
     display: inline-block;
     margin-right: 2%;
@@ -354,6 +364,14 @@ div.sheet-pc {
       padding: 15% 2%; }
     div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings h2 {
       font-size: 1.1em; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-movement h2 {
+      font-size: 1em; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-psychic {
+      grid-template-columns: 5fr auto 1fr;
+      margin-bottom: 5%; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-psychic h2 {
+        font-size: 1em;
+        margin-top: 15%; }
   div.sheet-pc div.sheet-arms div.sheet-right-col {
     display: inline-block;
     width: 43%; }
@@ -379,6 +397,18 @@ div.sheet-pc {
         grid-column: 3; }
     div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-repeating-container div.sheet-settings {
       grid-column: 1 / 4; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy {
+      grid-template-columns: auto auto 1fr auto 1fr; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy h1 {
+        font-size: 1.5em; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy h2 {
+        margin-top: 15%; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption {
+      grid-template-columns: auto auto 1fr; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption h1 {
+        font-size: 1.5em; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption h2 {
+        margin-top: 15%; }
 
 /*  REPEATING SECTIONS
     ============================= */
