--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -258,6 +258,11 @@ div.sheet-pc {
     }
 
     div.sheet-arms {
+        div.sheet-headers,
+        div.sheet-repeating-container {
+          margin-top: 5%;
+        }
+
         div.sheet-left-col {
             display: inline-block;
             margin-right: 2%;
@@ -284,6 +289,22 @@ div.sheet-pc {
                     font-size: 1.1em;
                   }
                 }
+            }
+
+            div.sheet-movement {
+              h2 {
+                font-size: 1em;
+              }
+            }
+
+            div.sheet-psychic {
+              grid-template-columns: 5fr auto 1fr;
+              margin-bottom: 5%;
+
+              h2 {
+                font-size: 1em;
+                margin-top: 15%;
+              }
             }
         }
 
@@ -336,6 +357,30 @@ div.sheet-pc {
             div.sheet-repeating-container {
               div.sheet-settings {
                 grid-column: 1 / 4;
+              }
+            }
+
+            div.sheet-infamy {
+              grid-template-columns: auto auto 1fr auto 1fr;
+
+              h1 {
+                font-size: 1.5em;
+              }
+
+              h2 {
+                margin-top: 15%;
+              }
+            }
+
+            div.sheet-corruption {
+              grid-template-columns: auto auto 1fr;
+
+              h1 {
+                font-size: 1.5em;
+              }
+
+              h2 {
+                margin-top: 15%;
               }
             }
         }
